# daily-arXiv-astro-ph

./: .gitignore  2026-04-25.md  2026-04-27.md  2026-05-16.md  README.md  pyproject.toml  run.sh  template.md  update_readme.py
.github/workflows/: run.yml
ai/: enhance.py  structure.py  system.txt  template.txt
data/: 2025-04-17.jsonl  2025-04-17.md  2025-04-17_AI_enhanced_.jsonl  2025-04-17_AI_enhanced_Chinese.jsonl  2025-04-18.jsonl  2025-04-18.md  2025-04-18_AI_enhanced_.jsonl  2025-04-21.jsonl  2025-04-21.md  2025-04-21_AI_enhanced_.jsonl  2025-04-22.jsonl  2025-04-22.md  2025-04-22_AI_enhanced_.jsonl  2025-04-23.jsonl  2025-04-23.md  2025-04-23_AI_enhanced_.jsonl  2025-04-24.jsonl  2025-04-24.md  2025-04-24_AI_enhanced_.jsonl  2025-04-25.jsonl  2025-04-25.md  2025-04-25_AI_enhanced_.jsonl  2025-04-28.jsonl  2025-04-28.md  2025-04-28_AI_enhanced_.jsonl  2025-04-29.jsonl  2025-04-29.md  2025-04-29_AI_enhanced_.jsonl  2025-04-30.jsonl  2025-04-30.md  2025-04-30_AI_enhanced_.jsonl  2025-05-01.jsonl  2025-05-01.md  2025-05-01_AI_enhanced_.jsonl  2025-05-02.jsonl  2025-05-02.md  2025-05-02_AI_enhanced_.jsonl  2025-05-05.jsonl  2025-05-05.md  2025-05-05_AI_enhanced_.jsonl  (+857 more)
src/: embedding.py  fetcher.py  llm.py  main.py  renderer.py  zotero.py
src/templates/: paper.jinja2  readme.jinja2
to_md/: convert.py  paper_template.md
zotero/: zotero_all.bib  zotero_library_2026_0605.bib
