[project]
name = "daily-arxiv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.1.3",
    "dotenv>=0.9.9",
    "langchain>=0.3.20",
    "langchain-openai>=0.3.9",
    "scrapy>=2.12.0",
    "socksio>=1.0.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
