[project]
name = "daily-arxiv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.1.3",
    "python-dotenv>=1.0.1",
    "openai>=1.59.0",
    "pydantic>=2.10.0",
    "jinja2>=3.1.5",
    "bibtexparser>=1.4.1",
]

[dependency-groups]
dev = []
